<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/wab"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <EditText
        android:id="@+id/editText_user"
        android:layout_width="315dp"
        android:layout_height="52dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_username"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textAlignment="viewStart"
        android:textColor="#0A0A0A"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/editText_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="315dp"
        android:layout_height="52dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="viewStart"

        android:textColor="#0A0A0A"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.466"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="315dp"

        android:layout_height="52dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#FA141414"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_password" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="316dp"
        android:layout_height="56dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/canteen"
        android:textColor="#FA0F0F0F"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="163dp"
        android:layout_height="49dp"
        android:fontFamily="@font/fugaz_one"
        android:text="@string/staff"
        android:textAlignment="viewEnd"
        android:textColor="#FA070707"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

</androidx.constraintlayout.widget.ConstraintLayout>