<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00AAA7A7">

    <TextView
        android:id="@+id/remove_cart_item_tv"
        android:layout_width="264dp"
        android:layout_height="42dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/textview"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/remove_cart_item_btn"
        android:layout_width="124dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="@color/black"
        android:text="@string/remove"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cancel_cart_item_btn"
        app:layout_constraintTop_toBottomOf="@+id/remove_cart_item_tv"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/cancel_cart_item_btn"
        android:layout_width="128dp"
        android:layout_height="41dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"
        android:backgroundTint="#F8000000"
        android:text="@string/cancel"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/remove_cart_item_tv"
        app:layout_constraintVertical_bias="0.029"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>
